docs(deployment): Windows PC + PM2 배포 준비 (Railway 환경 유지)
NEW FILES:
- pm2.config.js: Windows PC PM2 클러스터 프로세스 관리 설정
- PC_SERVER_DEPLOYMENT_GUIDE.md: 상세 배포/운영 가이드

MODIFIED:
- .env.example: IS_INTERNAL_SERVER 플래그 추가 (Windows PC 조건부 제어)
- server/utils/selfPing.js: IS_INTERNAL_SERVER로 self-ping 제어

IMPORTANT:
✅ Railway 운영 계속 유지 (self-ping 작동)
✅ Windows PC 이전 시 IS_INTERNAL_SERVER=true 설정하면 self-ping 비활성화
✅ 기존 서비스 사용자에게 영향 없음

--- a/.env.example
+++ b/.env.example
@@ -2,21 +2,23 @@
 # 환경 변수 설정 예제 파일
 # .env 파일을 생성하고 실제 값으로 변경하세요
 # ===============================================
+#
+# Railway 환경 + Windows PC + PM2 배포 모두 호환
+# ===============================================
 
-# ==================== 프론트엔드 설정 ====================
-# 백엔드 API URL
-# 개발: http://localhost:5000/api
-# 프로덕션: https://your-railway-app.railway.app/api
-REACT_APP_API_BASE_URL=http://localhost:5000/api
+# ==================== 환경 설정 ====================
+# production: 프로덕션 환경
+# development: 개발 환경
+NODE_ENV=production
 
-# 서버 URL (Socket.io 연결용)
-# 개발: http://localhost:5000
-# 프로덕션: https://your-railway-app.railway.app
-REACT_APP_SERVER_URL=http://localhost:5000
-
-# ==================== 백엔드 설정 ====================
-# 서버 포트 (Railway는 자동으로 PORT 환경변수 제공)
+# 서버 포트 (Railway: 자동, Windows PC: 5000)
 PORT=5000
+
+# ==================== Windows PC + PM2 설정 ====================
+# Windows PC 사내 서버 플래그
+# true: self-ping 비활성화 (사내 PC는 항상 온라인)
+# Railway에서는 이 변수를 설정하지 않음 (기본값: undefined)
+IS_INTERNAL_SERVER=false  # Railway 기본값 (명시하지 않아도 됨)
 
 # JWT 시크릿 키 (반드시 강력한 키로 변경하세요!)
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
