chore(env): enforce env-only config for PC server
- Load .env.production when present; fallback to .env
- Require PORT, MONGO_URI/MONGODB_URI, JWT_SECRET in production
- CORS/socket origins via FRONTEND_URL and ALLOWED_ORIGINS only
- Remove hardcoded localhost URLs/ports and Railway fallbacks
- Self-ping uses BACKEND_URL only; skip when unset/internal server
- Add PM2 scripts; annotate PC guide; drop railway.json
- Adjust test-selfping to env-only

--- a/package.json
+++ b/package.json
@@ -69,7 +69,12 @@
     "server:dev": "nodemon server/server.js",
     "deploy:backend": "echo 'Backend deployment configured for Railway'",
     "deploy:frontend": "vercel --prod",
-    "deploy:frontend:preview": "vercel"
+    "deploy:frontend:preview": "vercel",
+    "pm2:start": "pm2 start pm2.config.js",
+    "pm2:stop": "pm2 stop bs-hr-backend",
+    "pm2:restart": "pm2 restart bs-hr-backend",
+    "pm2:logs": "pm2 logs bs-hr-backend",
+    "pm2:startup": "pm2 startup && pm2 save"
   },
   "eslintConfig": {
     "extends": [
