--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 # .env 파일을 생성하고 실제 값으로 변경하세요
 # ===============================================
 #
-# Railway 환경 + Windows PC + PM2 배포 모두 호환
+# 사내 PC + PM2 전용 브랜치 (pc-server-no-railway)
 # ===============================================
 
 # ==================== 환경 설정 ====================
@@ -11,14 +11,14 @@
 # development: 개발 환경
 NODE_ENV=production
 
-# 서버 포트 (Railway: 자동, Windows PC: 5000)
+# 서버 포트 (Windows PC: 5000)
 PORT=5000
 
 # ==================== Windows PC + PM2 설정 ====================
 # Windows PC 사내 서버 플래그
 # true: self-ping 비활성화 (사내 PC는 항상 온라인)
 # Railway에서는 이 변수를 설정하지 않음 (기본값: undefined)
-IS_INTERNAL_SERVER=false  # Railway 기본값 (명시하지 않아도 됨)
+IS_INTERNAL_SERVER=true  # 사내 PC 기본값 (self-ping 비활성화)
 
 # JWT 시크릿 키 (반드시 강력한 키로 변경하세요!)
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
@@ -59,3 +59,8 @@ DISABLE_ESLINT_PLUGIN=true
 
 # 브라우저 자동 실행
 BROWSER=default
+
+# ==================== 프론트/백엔드 URL ====================
+# CORS 및 테스트용 URL
+FRONTEND_URL=http://localhost:3000
+BACKEND_URL=http://localhost:5000
