chore(cluster): add PM2 instance guards and configurable timeouts
- Guard schedulers with NODE_APP_INSTANCE check (prevents duplicate cron jobs)
- Make shutdown timeout configurable via SHUTDOWN_TIMEOUT_MS env var
- Replace remaining console.log with structured logger
- Remove start-mongodb.js from production npm start script
- Update .env.example with SHUTDOWN_TIMEOUT_MS documentation

Ensures safe 24/7 operation on Windows PC + PM2 cluster mode.

--- a/.env.example
+++ b/.env.example
@@ -64,3 +64,7 @@ BROWSER=default
 # CORS 및 테스트용 URL
 FRONTEND_URL=http://localhost:3000
 BACKEND_URL=http://localhost:5000
+
+# ==================== 운영 안정성 설정 ====================
+# Graceful shutdown timeout (기본값: 10000ms = 10초)
+SHUTDOWN_TIMEOUT_MS=10000
