security: AI API 키 환경변수 제거 및 보안 강화
- .env 및 .env.example에서 모든 AI API 키 주석 처리
- API 키는 시스템 관리 페이지에서 DB에 암호화하여 저장
- 환경 변수 파일에 하드코딩 방지
- Claude API 키 설정 추가

--- a/.env.example
+++ b/.env.example
@@ -33,20 +33,26 @@ MONGO_URI=mongodb://127.0.0.1:27017/busung_hr
 MONGODB_URI=mongodb://localhost:27017/hr_system
 
 # ==================== AI 설정 ====================
-# AI Provider 선택 (openai 또는 gemini)
-AI_PROVIDER=openai
-REACT_APP_AI_PROVIDER=openai
+# 보안을 위해 API 키는 시스템에서 직접 설정하지 않고
+# 시스템 관리 페이지에서 DB에 암호화하여 저장합니다
+# AI Provider 선택 (openai, gemini, claude)
+# AI_PROVIDER=openai
+# REACT_APP_AI_PROVIDER=openai
 
 # AI 모델 선택
-AI_MODEL=gpt-4o-mini
+# AI_MODEL=gpt-4o-mini
 
 # OpenAI API Key (https://platform.openai.com/api-keys)
-OPENAI_API_KEY=your-openai-api-key-here
-REACT_APP_OPENAI_API_KEY=your-openai-api-key-here
-AI_API_KEY=your-openai-api-key-here
+# OPENAI_API_KEY=your-openai-api-key-here
+# REACT_APP_OPENAI_API_KEY=your-openai-api-key-here
+# AI_API_KEY=your-openai-api-key-here
 
 # Google Gemini API Key (https://makersuite.google.com/app/apikey)
-GEMINI_API_KEY=your-gemini-api-key-here
+# GEMINI_API_KEY=your-gemini-api-key-here
+
+# Claude API Key (https://console.anthropic.com/)
+# CLAUDE_API_KEY=your-claude-api-key-here
+# ANTHROPIC_API_KEY=your-anthropic-api-key-here
 
 # ==================== 외부 API ====================
 # 공휴일 API 키 (공공데이터포털)
