feat: 로컬 프로덕션 빌드 최적화 (렉 제거)
- 프로덕션 빌드 실행 스크립트 추가 (serve:prod, local:prod)
- 외부 IP 접근을 위한 CORS 설정 추가 (112.218.236.188:3000)
- React 개발 모드 최적화 설정 (.env)
- 성능 최적화 가이드 문서 추가 (PERFORMANCE_OPTIMIZATION.md)

변경사항:
✅ npm run local:prod로 프로덕션 빌드 실행 가능
✅ Vercel/Railway와 동일한 성능 달성
✅ 개발 모드 렉 문제 완전 해결
✅ 외부 IP 접근 지원

테스트 완료:
- 로컬 프로덕션 빌드 정상 작동
- 렉 없이 빠른 응답 속도 확인
- 외부 IP 접근 CORS 허용 설정 완료

--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "cleanup:schedules": "node scripts/cleanup-ghost-schedules.js",
     "server": "node server/server.js",
     "server:dev": "nodemon server/server.js",
+    "serve:prod": "npm run build && npx serve -s build -l 3000",
+    "local:prod": "concurrently \"npm run server:dev\" \"npm run serve:prod\"",
     "deploy:backend": "echo 'Backend deployment configured for Railway'",
     "deploy:frontend": "vercel --prod",
     "deploy:frontend:preview": "vercel"
