fix: 재직자 우선 로그인 로직 + 퇴사 처리 Soft Delete로 변경
- 로그인 시 status='재직'인 직원만 검색 (우선순위 보장)
- 같은 이름/사번으로 여러 레코드 있어도 재직자만 로그인 가능
- 퇴사 처리 시 데이터 삭제 X → status='퇴사'로만 변경 (Soft Delete)
- 퇴사일 자동 기록, 근태/연차/평가 데이터 보존
- 재입사 시 새 사번으로 등록 가능 (기존 데이터 보존)

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   "scripts": {
     "start:mongodb": "node start-mongodb.js",
     "start": "concurrently \"npm run start:mongodb\" \"nodemon server/server.js\" \"craco start\"",
-    "start:frontend": "craco start",
+    "start:frontend": "set PORT=3000 && craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject",
