refactor: Railway 의존성 완전 제거
- GitHub Actions에서 Railway 배포 작업 제거
- APK 빌드 시 Ngrok URL 사용하도록 변경
- railway.json, nixpacks.toml 삭제
- Railway 관련 문서 파일 삭제
- 현재 구조: Vercel (Frontend) + PM2/Ngrok (Backend)

--- a/.github/workflows/ci-deploy.yml
+++ b/.github/workflows/ci-deploy.yml
@@ -1,4 +1,4 @@
-name: CI & Deploy (Frontend -> Vercel, Backend -> Railway)
+name: CI & Deploy (Frontend -> Vercel)
 
 on:
   push:
@@ -36,17 +36,4 @@ jobs:
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
 
-  deploy-backend:
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install Railway CLI
-        run: curl -sSL https://raw.githubusercontent.com/railwayapp/cli/master/install.sh | sh
-      - name: Deploy to Railway (requires RAILWAY_API_KEY and RAILWAY_PROJECT_ID secrets)
-        env:
-          RAILWAY_API_KEY: ${{ secrets.RAILWAY_API_KEY }}
-          RAILWAY_PROJECT_ID: ${{ secrets.RAILWAY_PROJECT_ID }}
-        run: |
-          railway whoami || true
-          railway up --projectId $RAILWAY_PROJECT_ID --detach || true
+  # Backend deployment removed - using local PM2 + Ngrok instead
