--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -46,7 +46,7 @@ jobs:
         run: npm run build
         env:
           CI: false
-          REACT_APP_API_BASE_URL: https://bshrsystem-production.up.railway.app/api
+          REACT_APP_API_BASE_URL: https://hydrokinetic-disbelievingly-gaynelle.ngrok-free.dev/api
           REACT_APP_AI_PROVIDER: openai
           REACT_APP_HOLIDAY_API_KEY: 603c88ccf76cf95f2e1c8ffe7dfa6be2fd88feb4bd6e3000a0293c308885e111
 
