feat: FBD_One 로컬 배포 설정 및 SSL, 급여 계산 개선

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "scripts": {
     "start:mongodb": "node start-mongodb.js",
     "start": "concurrently \"npm run start:mongodb\" \"nodemon server/server.js\" \"craco start\"",
+    "start:local": "concurrently \"nodemon server/server.js\" \"craco start\"",
     "start:frontend": "set PORT=3000 && craco start",
     "build": "craco build",
     "test": "craco test",
