chore: 개발 성능 최적화 및 안전 관리 개선
- React StrictMode 비활성화 (개발 속도 향상)
- Webpack 캐시 활성화 (빌드 속도 개선)
- 무사고 일수 계산 로직 개선 (기준일 2025-12-02)
- 웹 아이콘 재생성 스크립트 추가
- 프로덕션 로컬 실행 스크립트 추가

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "start:mongodb": "node start-mongodb.js",
     "start": "concurrently \"npm run start:mongodb\" \"nodemon server/server.js\" \"craco start\"",
     "start:local": "concurrently \"nodemon server/server.js\" \"craco start\"",
+    "start:prod": "concurrently \"nodemon server/server.js\" \"node start-production-local.js\"",
     "start:frontend": "set PORT=3000 && craco start",
     "build": "craco build",
     "test": "craco test",
